src/tests/snapshots/eventql_parser__tests__analysis__analyze_agg_must_use_source_bound.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    ExpectSourceBoundProperty:
      - 2
      - 25
