src/tests/snapshots/eventql_parser__tests__analysis__analyze_invalid_type_contains.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    TypeMismatch:
      - 2
      - 24
      - String
      - Number
