src/tests/snapshots/eventql_parser__tests__analysis__analyze_prevent_using_aggregate_with_source_based_props.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    UnallowedAggFuncUsageWithSrcField:
      - 2
      - 46
