src/tests/snapshots/eventql_parser__tests__analysis__analyze_reject_agg_in_predicate.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    WrongAggFunUsage:
      - 2
      - 11
      - COUNT
