src/tests/snapshots/eventql_parser__tests__analysis__analyze_valid_type_conversion.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      Record:
        - name: date
          value:
            attrs:
              pos:
                line: 2
                col: 22
            value:
              Binary:
                lhs:
                  attrs:
                    pos:
                      line: 2
                      col: 22
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 2
                            col: 22
                        value:
                          Access:
                            target:
                              attrs:
                                pos:
                                  line: 2
                                  col: 22
                              value:
                                Id: e
                            field: data
                      field: date
                operator: As
                rhs:
                  attrs:
                    pos:
                      line: 2
                      col: 37
                  value:
                    Id: DATETIME
  distinct: false
  meta:
    project:
      Record:
        date: DateTime
